# CosciaPollo

./: .gitignore  CosciaPolloBot.py  Dockerfile  LICENSE  Procfile  README.md  bot.py  docker-compose.yml  heroku_settings.py  pyproject.toml  requirements.txt  settings_dist.py  triggers.py
