[tool.poetry]
name = "cosciapollo"
version = "0.1.0"
description = ""
authors = ["Dawid Weglarz <dawid.weglarz95@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-telegram-bot = "13.13"
requests = "^2.31.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
